[project]
name = "python-concurrency-with-asyncio"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
]
authors = ["Pavel Karateev <lancelote.du.lac@gmail.com>"]

[tool.uv]
dev-dependencies = [
    "mypy",
    "pre-commit",
    "ruff",
    "types-requests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
exclude = [
    'vendor/',
    '.venv/'
]
mypy_path = "src"
strict = true

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "vendor"
]
line-length = 80
target-version = "py312"
