[project]
name = "python-concurrency-with-asyncio"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests==2.32.3",
]
authors = ["Pavel Karateev <lancelote.du.lac@gmail.com>"]

[tool.uv]
dev-dependencies = [
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "ruff==0.11.11",
    "types-requests==2.32.0.20241016",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
exclude = [
    'vendor/',
    '.venv/'
]
mypy_path = "src"
strict = true

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "vendor"
]
line-length = 80
target-version = "py313"
